# simple-image-gallery

./: Dockerfile  Dockerfile-ci  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  docker-publish.yml  python-build.yml  test.yml
portal/: default.conf  dnschef.toml  docker-compose.yml
src/image_gallery/: __init__.py
src/image_gallery/configuration/: config.py  modules.py
src/image_gallery/controller/: diashow.py  images.py  index.py
src/image_gallery/services/: base.py  frontend.py  images.py  index.py
src/image_gallery/static/js/: script.min.js
src/image_gallery/templates/: base.html  diashow.html  index.html  navbar_w_items.html
src/simple_image_gallery/configuration/: config.py
src/simple_image_gallery/controller/: index.py  slideshow.py
src/simple_image_gallery/services/: base.py
src/simple_image_gallery/templates/: index.html  navbar_w_items.html
tests/: conftest.py
tests/test_image_gallery/services/: test_images.py
tests/test_image_gallery/utils/: test_time.py
tests/test_simple_image_gallery/services/: test_images.py
tests/test_simple_image_gallery/utils/: test_time.py
