[build-system]
requires = [ 'setuptools>=69.1.1', 'setuptools-scm>=8' ]
build-backend = 'setuptools.build_meta'

[project]
name = 'image_gallery'
dynamic = [ 'version' ]
readme = 'README.md'
license = 'Apache-2.0'
authors = [
    { name = 'Louke', email = 'git@jannsen.org' }
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: Implementation :: CPython',
]
dependencies = [
    'flask>=3.1.0',
    'flask-injector>=0.15.0',
    'pydantic-settings>=2.8.1',
    'waitress>=3.0.2'
]

[project.optional-dependencies]
test = [
    'pytest>=8.3.5'
]

[project.scripts]
image_gallery = 'image_gallery.__main__:main'

[tool.setuptools.package-data]
'*' = [ '*.json', '*.jpg' ]

[tool.setuptools_scm]