[build-system]
requires = [ 'setuptools>=69.1.1', 'setuptools-scm>=8' ]
build-backend = 'setuptools.build_meta'

[project]
name = 'simple-image-gallery'
description = 'A simple image gallery web application built with Flask.'
dynamic = [ 'version' ]
readme = 'README.md'
license = 'Apache-2.0'
authors = [
    { name = 'Louke', email = 'git@jannsen.org' }
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: Implementation :: CPython',
]
dependencies = [
    'flask>=3.1.0',
    'flask-injector>=0.15.0',
    'pydantic-settings>=2.8.1',
    'pydantic-extra-types>=2.10.5',
    'waitress>=3.0.2'
]

[project.urls]
Homepage = 'https://github.com/Louuke/simple-image-gallery'
Repository = 'https://github.com/Louuke/simple-image-gallery.git'

[project.optional-dependencies]
test = [
    'pytest>=8.3.5'
]

[project.scripts]
simple-image-gallery = 'simple_image_gallery.__main__:main'

[tool.setuptools.package-data]
'*' = ['static/**', 'templates/*']

[tool.setuptools_scm]